--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<main>
 <h1>Olá, seja bem vindo à minha página pessoal!</h1>
 <p>Me chamo Jorge Oliveira dos Santos, sou designer gráfico, cadista e desenvolvedor de aplicações web e desktop. Aqui você encontrará alguns de meus trabalhos, cursos, livros, bases de conhecimento que criei com tudo o que aprendi para disponibilizar para quem está começando.</p>
 <h2>Skills:</h2>
@@ -13,3 +14,5 @@
   <li>jorgecad.wordpress.com</li>
   <li>jorge.sos777@gmail.com</li>
 </ul>
+<p>Sinta-se à vontade para colaborar, tirar dúvidas ou enviar sugestões</p>
+</main>
