--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jorge Oliveira Santos</title>
+  <title>Portfólio</title>
   <link rel="stylesheet" href="css/site.css">
   <meta charset="UTF-8"/>
 </head>
 <nav class="js-nav">
   <ul>
-    <li class="active"><a href="index.html">Início</a></li>
-    <li><a href="portfolio.html">Portfólio</a></li>
+    <li><a href="index.html">Início</a></li>
+    <li class="active"><a href="portfolio.html">Portfólio</a></li>
     <li><a href="design.html">Design Gráfico</a></li>
     <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
     <li><a href="cursos.html">Cursos</a></li>
@@ -17,7 +17,7 @@
 </nav>
 <body class="js-page">
   <main>
-    <h1>Olá, seja bem vindo à minha página pessoal!</h1>
+    <h1>Portfólio</h1>
     <p>Me chamo Jorge Oliveira dos Santos, sou designer gráfico, cadista e desenvolvedor de aplicações web e desktop. Aqui você encontrará alguns de meus trabalhos, cursos, livros, bases de conhecimento que criei com tudo o que aprendi para disponibilizar para quem está começando.</p>
     <h3>Skills:</h3>
     <ul>
