--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Jorge Oliveira Santos</title>
   <link rel="stylesheet" href="css/site.css">
+  <link rel="icon" type="image/x-icon" href="../jorgeoliveirasantos.github.io/logobranca.ico">
   <meta charset="UTF-8"/>
 </head>
 <nav class="js-nav">
@@ -15,8 +16,9 @@
     <li class="right"><a href="sobre.html">Sobre</a></li>
   </ul>
 </nav>
-<body class="js-page">
-  <main>
+<img class="js-banner" src="../jorgeoliveirasantos.github.io/files/g62299.png"/>
+<body>
+  <main class="js-page">
     <h1>Olá, seja bem vindo à minha página pessoal!</h1>
     <p>Me chamo Jorge Oliveira dos Santos, sou designer gráfico, cadista e desenvolvedor de aplicações web e desktop. Aqui você encontrará alguns de meus trabalhos, cursos, livros, bases de conhecimento que criei com tudo o que aprendi para disponibilizar para quem está começando.</p>
     <h3>Skills:</h3>
