--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Jorge Oliveira Santos</title>
   <link rel="stylesheet" href="css/site.css">
-  <link rel="icon" type="image/x-icon" href="../jorgeoliveirasantos.github.io/logobranca.ico">
+  <link rel="icon" type="image/x-icon" href="/logobranca.ico">
   <meta charset="UTF-8"/>
 </head>
 <nav class="js-nav">
@@ -16,7 +16,7 @@
     <li class="right"><a href="sobre.html">Sobre</a></li>
   </ul>
 </nav>
-<img class="js-banner" src="../jorgeoliveirasantos.github.io/files/g62299.png"/>
+<img class="js-banner" src="/files/g62299.png"/>
 <body>
   <main class="js-page">
     <h1>Olá, seja bem vindo à minha página pessoal!</h1>
