--- a/sobre.html
+++ b/sobre.html
@@ -9,63 +9,107 @@
   <ul>
     <li><a href="index.html">Início</a></li>
     <li><a href="portfolio.html">Portfólio</a></li>
+    <li><a href="informatica.html">Informática</a></li>
     <li><a href="design.html">Design Gráfico</a></li>
-    <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
-    <li><a href="cursos.html">Cursos</a></li>
+    <li class="js-drop-button">
+      <a>Programação ▼</a>
+      <div class="js-drop-content">
+        <a href="programacao.html">Programação</a>
+        <a>Desenvolvimento Web</a>
+        <a>.NET Core</a>
+        <a>ASP .NET</a>
+        <a>C#</a>
+        <a>C e C++</a>
+        <a>Avalonia UI</a>
+        <a>Inteligência Artificial</a>
+        <a>Gráficos e Multimídia</a>
+      </div>
+    </li>
+    <li class="js-drop-button">
+      <a>Cursos ▼</a>
+      <div class="js-drop-content">
+        <a href="cursos.html">Cursos</a>
+        <a>Informática</a>
+        <a>Design Gráfico</a>
+        <a>Desenvolvimento Web</a>
+        <a>Programação</a>
+      </div>
+    </li>
     <li class="right active"><a href="sobre.html">Sobre</a></li>
   </ul>
 </nav>
+
+
+
 <body class="js-page">
   <main>
     <h1>Sobre</h1>
-    <p>Me chamo Jorge Oliveira dos Santos, sou designer gráfico, cadista e desenvolvedor de aplicações web e desktop. Aqui você encontrará alguns de meus trabalhos, cursos, livros, bases de conhecimento que criei com tudo o que aprendi para disponibilizar para quem está começando.</p>
-    <h3>Skills:</h3>
+    <table style="width: 100%; margin: auto; background-color: #0005; padding: 20px; text-align: center;">
+      <tr>
+        <td>
+          <a href="https://www.facebook.com/artesgraficaseprojetos" target="_blank">
+          <img src="files/facebook.png" width="80px" title="Facebook"></a>
+        </td>
+        <td>
+          <a href="mailto:jorge.sos777@gmail.com?Subject=Contato" target="_blank">
+          <img src="files/gmail.png" width="80px" title="Gmail"></a>
+        </td>
+        <td>
+          <a href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">
+          <img src="files/Workana.png" width="80px" title="Workana"></a>
+        </td>
+        <td>
+          <a href="https://join.skype.com/invite/uMbQf0utKfUz" target="_blank">
+          <img src="files/skype.png" width="80px" title="Skype"></a>
+        </td>
+        <td>
+          <a href="https://wa.me/5577991161892" target="_blank">
+          <img src="files/whatsapp.png" width="80px" title="Whatsapp"></a>
+        </td>
+        <td>
+          <a href="https://www.youtube.com/channel/UC9XLPhnWcJqaT5bmlb2KezA" target="_blank">
+          <img src="files/Youtube.png" width="80px" title="Youtube"></a>
+        </td>
+      </tr>
+      <tr>
+        <td>facebook</td>
+        <td>gmail</td>
+        <td>workana</td>
+        <td>skype</td>
+        <td>whatsapp</td>
+        <td>youtube</td>
+      </tr>
+    </table>
+
+    <h3>Formação</h3>
     <ul>
-      <li>Desenvolvimento na plataforma .NET Core</li>
-      <li>Desenvolvimento web na plataforma ASP .NET Core</li>
-      <li>Desenvolvimento em C++</li>
+      <li style='list-style: "\261B";'>Ensino Médio Completo</li>
+      <li style='list-style: "\261B";'>Inglês Básico</li>
+      <li style='list-style: "\261B";'>Espanhol Básico</li>
     </ul>
-    <hr>
-    <h3>Contato:</h3>
+
+    <h3>Habilidades</h3>
     <ul>
-      <li>jorgecad.wordpress.com</li>
-      <li>jorge.sos777@gmail.com</li>
+      <li style='list-style: "\261B";'>Design Gráfico em Comunicação Visual</li>
+      <li style='list-style: "\261B";'>Instrutor de Cursos Técnicos</li>
+      <li style='list-style: "\261B";'>Modelagem 3D</li>
+      <li style='list-style: "\261B";'>Desenvolvimento Desktop em .NET Core</li>
+      <li style='list-style: "\261B";'>Desenvolvimento Web em ASP .NET Core</li>
+      <li style='list-style: "\261B";'>Desenvolvimento em C++</li>
     </ul>
-    <p>Sinta-se à vontade para colaborar, tirar dúvidas ou enviar sugestões</p>
+
+    <h3>Carreira</h3>
+    <p class="inicial">
+      Em 2007, com 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na Dignart Publicidade Visual, onde permaneci até 2009, trabalhando também como adesivador e na plotagem de projetos de AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.
+    </p>
+    <p>
+      Em 2009, decidido a trabalhar como projetista, encontrei uma vaga, também de estagiário, dessa vez cadista, no escritório Zamuner Arquitetura, a passagem foi curta, pois ao final daquele mesmo ano, o arquiteto fechou o escritório para retornar para o Paraná, mas antes, me indicou para trabalhar na cidade vizinha no escritório de decoração que lhe auxiliava no projetos. Em 2010 me mudei para Barreiras, e fui trabalhar no escritório da Light and Design Interiores, como projetista, apesar da difícil adaptação à cidade por causa do transporte, trabalhei na Light and Design até o início de 2011, quando retornei para Luis Eduardo Magalhães, e fui chamado pela NIT Cursos para ministrar o Curso de AutoCAD, o qual fui co-autor desenvolvendo também o material didático e a metodologia de ensino. Devido ao trabalho em horário comercial como cadista na Radoll Arquitetura, ministrei as aulas de AutoCAD no período noturno e aos sábados, isso do começo de 2011 ao final de 2016. Até 2018 trabalhei ainda como cadista em escritórios de arquitetura, e duas vezes por contrato temporário em agências de Comunicação Visual. Além de ministrar aulas de AutoCAD também na Microlins.
+    </p>
+    <p>
+      A partir de 2018 comecei a trabalhar como freelancer e iniciei minha formação em Programação já acumulando atualmente sete certificados e alguns projetos concluídos com êxito. Atualmente me dedico exclusivamente ao desenvolvimento Web com a plataforma ASP .NET e desenvolvimento desktop com a plataforma .NET, ambas utilizando a linguagem C#, apesar de executar alguns projetos com C++.
+    </p>
+    <p>
+    </p>
   </main>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-....
 </body>
 </html>
-
