--- a/index.html
+++ b/index.html
@@ -3,71 +3,73 @@
 <head>
   <title>Jorge Oliveira Santos</title>
   <link rel="stylesheet" href="css/site.css">
-  <link rel="icon" type="image/x-icon" href="../jorgeoliveirasantos.github.io/logobranca.ico">
+  <link rel="icon" type="image/x-icon" href="logobranca.ico">
   <meta charset="UTF-8"/>
 </head>
 <nav class="js-nav">
   <ul>
     <li class="active"><a href="index.html">Início</a></li>
     <li><a href="portfolio.html">Portfólio</a></li>
+    <li><a href="informatica.html">Informática</a></li>
     <li><a href="design.html">Design Gráfico</a></li>
-    <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
-    <li><a href="cursos.html">Cursos</a></li>
+    <li class="js-drop-button">
+      <a>Programação ▼</a>
+      <div class="js-drop-content">
+        <a href="programacao.html">Programação</a>
+        <a>Desenvolvimento Web</a>
+        <a>.NET Core</a>
+        <a>ASP .NET</a>
+        <a>C#</a>
+        <a>C e C++</a>
+        <a>Avalonia UI</a>
+        <a>Inteligência Artificial</a>
+        <a>Gráficos e Multimídia</a>
+      </div>
+    </li>
+    <li class="js-drop-button">
+      <a>Cursos ▼</a>
+      <div class="js-drop-content">
+        <a href="cursos.html">Cursos</a>
+        <a>Informática</a>
+        <a>Design Gráfico</a>
+        <a>Desenvolvimento Web</a>
+        <a>Programação</a>
+      </div>
+    </li>
     <li class="right"><a href="sobre.html">Sobre</a></li>
   </ul>
 </nav>
-<img class="js-banner" src="../jorgeoliveirasantos.github.io/files/g62299.png"/>
+<img class="js-banner" src="files/g62299.png"/>
+
+
 <body>
+
   <main class="js-page">
-    <h1>Olá, seja bem vindo à minha página pessoal!</h1>
-    <p>Me chamo Jorge Oliveira dos Santos, sou designer gráfico, cadista e desenvolvedor de aplicações web e desktop. Aqui você encontrará alguns de meus trabalhos, cursos, livros, bases de conhecimento que criei com tudo o que aprendi para disponibilizar para quem está começando.</p>
-    <h3>Skills:</h3>
-    <ul>
-      <li>Desenvolvimento na plataforma .NET Core</li>
-      <li>Desenvolvimento web na plataforma ASP .NET Core</li>
-      <li>Desenvolvimento em C++</li>
-    </ul>
-    <hr>
-    <h3>Contato:</h3>
-    <ul>
-      <li>jorgecad.wordpress.com</li>
-      <li>jorge.sos777@gmail.com</li>
-    </ul>
-    <p>Sinta-se à vontade para colaborar, tirar dúvidas ou enviar sugestões</p>
   </main>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-....
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
 
