--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
   </ul>
 </nav>
 <div class="js-banner">
-  <a id="banner1" href="programacao.html">
+  <a id="banner1" href="sobre.html">
     <img class="js-banner-img" src="files/banner1.png"/>
   </a>
-  <a id="banner2" href="cursos.html">
+  <a id="banner2" href="programacao.html">
     <img class="js-banner-img" src="files/banner2.png"/>
   </a>
-  <a id="banner3" href="design.html">
+  <a id="banner3" href="cursos.html">
     <img class="js-banner-img" src="files/banner3.png"/>
   </a>
-  <a id="banner4" href="design.html">
+  <a id="banner4" href="sobre.html">
     <img class="js-banner-img" src="files/banner4.png"/>
   </a>
 </div>
