--- a/Informatica/030/exercicio2.html
+++ b/Informatica/030/exercicio2.html
@@ -425,6 +425,6 @@
     Se tiver dificuldades com este exercício peça auxílio ao seu instrutor. Se preferir, baixe o exercício finializado no link abaixo e veja como é o resultado:
   </p>
 
-  <a class="js-button" href="Exercício Excel.xlsx">Baixar este exercício finalizado</a>
+  <a class="js-button" href="Exercício Excel.xlsx" target="_blank">Baixar este exercício finalizado</a>
 
 </body>
