--- a/Informatica/028/exercicio2.html
+++ b/Informatica/028/exercicio2.html
@@ -20,7 +20,7 @@
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Para tal, em um novo arquivo Word escreva o texto abaixo e ao final formate-o e insira uma imagem para deixá-lo o mais parecido possível:
   </p>
-  <embed src="exercicio2.pdf#toolbar=0&view=FitH" type="application/pdf"
+  <embed src="exercicio2.pdf#view=FitH&toolbar=0" type="application/pdf"
     style="border: none; width: 100%; height: 2800px;"></embed>
 
     <h3>Observações do exercício</h3>
