--- a/Informatica/033/senhas.html
+++ b/Informatica/033/senhas.html
@@ -7,8 +7,77 @@
 </head>
 
 <body class="js-post">
-	<h2></h2>
-  <img src="exercicio.png">
+	<h2>Senhas</h2>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    A maioria dos serviços que utilizarmos na internet e até mesmo nosso computador e alguns aplicativos que utilizamos, necessitarão de uma senha. A importância desta senha varia de acordo com a quantidade e a sensibilidade dos dados que ela protege. Algumas senhas serão utilizadas para acessar um aplicativo que utilizamos para tarefas simples, já outras serão utilizadas para acessar uma rede social na qual depositamos toda a nossa vida, ou para acessar a página de um serviço no qual cadastramos nossos documentos pessoais mais importantes. É preciso ter isso em mente para saber a importância que nossas senhas terão.
+  </p>
+
+  <h3>Definição de senha</h3>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Os sites e serviços que utilizarmos terão regras diferentes para definir uma senha, alguns definirão que a senha deve ter entre 3 e 6 caracteres, outros definirão que a senha deve ter entre 6 e 12, uns aceitarão uma senha composta apenas com letras e outros exigirão que a senha contenha letras, números e caracteres especiais. Muitos detectam quando uma senha possui sequências como 123, abc ou o nome ou e-mail do usuário, impedindo que se crie uma senha assim. 
+  </p>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Mas podemos seguir regras básicas para todas as nossas senhas de forma a garantir que cumpram esses requisitos e que sejam seguras, por exemplo:
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Use sempre senhas diferentes, não repita senhas em vários serviços.
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Utilize senhas longas, de no mínimo 6 caracteres.
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Utilize letras, números e caracteres especiais numa mesma senha.
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Não faça menção ao seu nome, e-mail, telefone ou dados pessoais numa senha.
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Não use sequências como xyz, 102030, 987, ou repetições como NNN, 555, kakaka.
+  </p>
+
+  <h3>Verificação multifator</h3>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Alguns sites não aceitarão que o login seja feito apenas com a senha e exigirão a autenticação de dois fatores. Autenticação de dois fatores consiste em uma segunda etapa. Assim que a senha é inserida corretamente, o site ou serviço envia um código para o e-mail ou telefone do usuário e esse código deve ser inserido novamente no site para concluir o acesso. Apesar de acrescentar um pouco de trabalho, essa possibilidade garante a segurança dos seus dados.
+  </p>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    A maioria dos serviços não exige essa verificação, mas possuem a possibilidade de configurá-la, confira se é possível e ative-a.
+  </p>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Tome cuidado para não perder acesso ao número de telefone ou e-mail que utiliza para verificação de dois fatores.
+  </p>
+
+  <h3>Autenticadores de acesso</h3>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Em alguns serviços a verificação de dois fatores pode ser feita por meio de um autenticador de acesso, que é um aplicativo que gera códigos aleatórios a todo o momento, e esse código pode ser copiado ou lido com um leitor de QRCode. Os dois mais utilizados são o Autenticador do Google e o Microsoft Authenticator. Na primeira utilização é necessário fazer uma sincronização entre o autenticador e o site que o utilizará para verificação de dois fatores.
+  </p>
+
+  <h3>Gerenciamento de senhas</h3>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Quando começamos a utilizar muitos serviços on-line ao mesmo tempo, começamos a repetir senhas e até mesmo esquecemos algumas. Como é uma prática de segurança não repetir as senhas, talvez seja necessário gerenciá-las. Uma das formas mais utilizadas é escrevê-las num arquivo de texto e salvá-lo numa pasta de fácil acesso. O problema disso é que vai por água a baixo todo o esforço de garantir a segurança das informações que essas senhas guardam. Se for necessário escrevê-las, siga algumas regras básicas:
+  </p>
+
+	<p style="margin-left: 60px;">&#x261B;
+    Não as guarde no mesmo dispositivo onde será feito o acesso.
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Não as associe ao e-mail, número de telefone ou o serviço em que serão utilizadas para o acesso.
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Não guarde num local (físico ou virtual) que você possa perder.
+  </p>
+	<p style="margin-left: 60px;">&#x261B;
+    Não guarde num local onde outros podem ter acesso (físico ou virtual).
+  </p>
+
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Uma ótima solução é utilizar um serviço de sincronização que armazenará suas senhas. Se você utiliza um navegador (confiável) que possua este serviço é uma boa ideia utilizá-lo. No Edge por exemplo, é possível utilizar a sincronização de senhas digitando: edge://settings/passwords na Barra de Endereços. É preciso logar em sua conta Microsoft para sincronizar as senhas com sua conta. 
+  </p>
+  
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Dessa forma mesmo desinstalando o navegador ou formatando o computador, basta fazer login novamente para recuperar todas as senhas. Outra vantagem é não precisar digitá-las para acessas seus serviços.
+  </p>
+
+	<p class="notas">
+    Caso prefira não salvar suas senhas num serviço on-line, acesse JorgeOliveiraSantos.github.io, e na sessão de downloads, baixe o Gerenciador de Senhas.
   </p>
 </body>
