--- a/Informatica/042/modo.html
+++ b/Informatica/042/modo.html
@@ -7,8 +7,33 @@
 </head>
 
 <body class="js-post">
-	<h2></h2>
-  <img src="exercicio.png">
+	<h2>Modo de Segurança</h2>
+  
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Muitas vezes erros no computador podem estar sendo causados não por arquivos corrompidos do sistema nem por setores defeituosos do disco, e sim por um programa instalado ou até mesmo um vírus em execução, para saber essa diferença é simples, basta executar uma inicialização segura do Windows.
+  </p>
+  <img src="modo.png">
+  
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Numa inicialização segura apenas os programas básicos são iniciados. Se ao efetuarmos uma inicialização segura um problema desaparecer, isso indica que ele estava sendo causado por algo instalado no Windows.
+  </p>  
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Para configurar a inicialização pressione ⊞+R, digite “msconfig” e pressione enter.
+  </p>  
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Podemos efetuar dois tipos de inicialização segura:
+  </p>  
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <b>Apenas Itens de Inicialização</b>: Na guia Inicialização do Sistema selecione Inicialização Segura e marque a opção “Mínima”. Na guia Serviços marque a opção “Ocultar todos os serviços da Microsoft”, em seguida clique em “Desativar Tudo”.
+  </p>  
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    A configuração acima fará com que apenas os serviços do sistema operacional iniciem com o Windows.
+  </p>  
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <b>Inicialização de Diagnóstico</b>: Caso com a inicialização acima o problema persista, você ainda pode efetuar uma inicialização de diagnóstico para tirar sua dúvida. Na guia Geral, marque “Inicialização de Diagnóstico”. Isso fará com que apenas os serviços mais básicos do computador sejam iniciados.
+  </p>
+  
+	<p class="notas">
+    Quando não precisar mais, lembre-se de abrir o msconfig novamente e configurá-lo para inicialização normal, caso contrário seu computador só iniciará os serviços básicos e alguns programas poderão não funcionar corretamente.
   </p>
 </body>
