--- a/downloads.html
+++ b/downloads.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portfólio</title>
+  <title>Downloads</title>
   <link rel="stylesheet" href="css/site.css">
   <meta charset="UTF-8"/>
 </head>
 <nav class="js-nav">
   <ul>
     <li><a href="index.html">Início</a></li>
-    <li class="active"><a href="portfolio.html">Portfólio</a></li>
+    <li><a href="downloads.html">Downloads</a></li>
     <li><a href="informatica.html">Informática</a></li>
     <li><a href="design.html">Design Gráfico</a></li>
     <li class="js-drop-button">
@@ -45,8 +45,7 @@
 
 <body class="js-page">
   <main>
-    <h1>Portfólio</h1>
-    <iframe src="https://drive.google.com/file/d/1_m5TJluHemV8QTrrD17_caIC_5lWGVoe/preview" style="display: block; width: 75%; margin: auto; height: 321111px;" allow="autoplay"></iframe>
+    <h1>Downloads</h1>
   </main>
 </body>
 </html>
