--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav class="js-nav">
   <ul>
     <li class="active"><a href="index.html">Início</a></li>
-    <li><a href="portfolio.html">Portfólio</a></li>
+    <li><a href="downloads.html">Downloads</a></li>
     <li><a href="informatica.html">Informática</a></li>
     <li><a href="design.html">Design Gráfico</a></li>
     <li class="js-drop-button">
@@ -41,7 +41,7 @@
 </nav>
 <div class="js-banner">
   <a id="banner1" href="sobre.html">
-    <img class="js-banner-img" src="files/banner1.png"/>
+    <img class="js-banner-img" src="files/Jorge oliveira.png"/>
   </a>
   <a id="banner2" href="programacao.html">
     <img class="js-banner-img" src="files/banner2.png"/>
