--- a/Informatica/028/exercicio1.html
+++ b/Informatica/028/exercicio1.html
@@ -17,7 +17,7 @@
     preciso estar logado em sua conta Microsoft.
   </p>
 
-  <embed src="exercicio1.pdf#toolbar=0&view=FitH" type="application/pdf"
+  <embed src="exercicio1.pdf#view=FitH&toolbar=0" type="application/pdf"
     style="border: none; width: 100%; height: 4200px;"></embed>
 
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
