--- a/Informatica/039/limpeza.html
+++ b/Informatica/039/limpeza.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Informática</title>
   <link rel="stylesheet" href="../../css/blog.css">
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
 </head>
 
 <body class="js-post">
-	<h2></h2>
-  <img src="exercicio.png">
-	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <h2>Limpeza de Disco</h2>
+
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    De vez em quando devemos efetuar uma limpeza de disco no Windows, essa limpeza fará todo o trabalho dito
+    anteriormente e limpará ainda outros arquivos como caches, otimização de entrega, a lixeira, miniaturas de imagens
+    entre outros.
+  </p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Para efetuar uma limpeza de disco clique em → Iniciar → Ferramentas Administrativas → Limpeza de Disco. Escolha a
+    unidade em que deseja fazer a limpeza. O Windows fica instalado em C:.
+  </p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Este menu Ferramentas Administrativas contém vários recursos essenciais para gerenciar o computador.
   </p>
 </body>
