--- a/cursos.html
+++ b/cursos.html
@@ -8,7 +8,7 @@
 <nav class="js-nav">
   <ul>
     <li><a href="index.html">Início</a></li>
-    <li><a href="portfolio.html">Portfólio</a></li>
+    <li><a href="downloads.html">Downloads</a></li>
     <li><a href="informatica.html">Informática</a></li>
     <li><a href="design.html">Design Gráfico</a></li>
     <li class="js-drop-button">
