--- a/Informatica/000/intro.html
+++ b/Informatica/000/intro.html
@@ -8,7 +8,7 @@
 
 <body class="js-post">
   <h2>Introdução</h2>
-  <img src="capa.jpg" style="float: left; margin: 10px; width: 300px;"/>
+  <img src="big_cover_front.png" style="float: left; margin: 10px; width: 300px;"/>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Esta página é uma compilação de títulos retirados em ordem do Curso de Informática Básica e Avançada. 
     Este material pode ser adquirido impresso no site da Amazon ou por meio de seu instrutor, também pode ser adquirido em formato digital (e-book) tanto no formato Kindle na página do produto na Amazon ou diretamente neste site. Este é o material oficial do Curso de Informática Básica e Avançada.</p>
@@ -26,10 +26,11 @@
     Desenvolver uma apostila não é uma tarefa fácil, requer bastante conhecimento sobre o assunto e algum tempo de prática. Com a experiência isso se torna mais fácil. Mas desenvolver uma metodologia de ensino é bem diferente, a gente só aprende isso com experiência em sala de aula. Isso você não encontra no Youtube. Esse é o diferencial dos cursos disponibilizados por mim, uma metodologia de ensino que mescla experiência de sala de aula, experiência em escrita de livros (pois o autor é também escritor), e experiência no cuidado com os alunos. Tudo para garantir que ao término do curso não tenha apenas ocorrido um processo mecânico, mas para que o aluno possa começar do zero e sair dominando o assunto para se inserir no mercado de trabalho.</p>
     
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    Estou constantemente desenvolvendo novos materiais e novos cursos, além de atualizar os materiais já produzidos, para acompanhar as alterações constantes nos produtos digitais. Portanto sugiro que esteja sempre atento em meu site para verificar se há algo novo que você goste, siga também minha página no Facebook, ou se preferir minhas contas em:</p>
-    
-    <a class="js-button" href="https://www.amazon.com/dp/B09SP1FRX5?language=pt_BR&currency=BRL" target="_blank">Adquirir o livro impresso</a>
-    <a class="js-button" href="https://www.amazon.com.br/dp/B09V99W1FL" target="_blank">Adquirir o livro digital</a>
+      Estou constantemente desenvolvendo novos materiais e novos cursos, além de atualizar os materiais já produzidos, para acompanhar as alterações constantes nos produtos digitais. Portanto sugiro que esteja sempre atento em meu site para verificar se há algo novo que você goste,
+      <a style="color: white;" href="https://jorgeoliveirasantos.github.io/sobre.html">saiba mais.</a>
+    </p>
+  
+    <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada" target="_blank">Adquirir o livro impresso ou digital</a>
 </body>
 
 
