--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 </nav>
 <div class="js-banner">
   <a id="banner1" href="sobre.html">
-    <img class="js-banner-img" src="files/Jorge oliveira.png"/>
+    <img class="js-banner-img" src="files/Jorge oliveira.webp"/>
   </a>
   <a id="banner2" href="programacao.html">
-    <img class="js-banner-img" src="files/banner2.png"/>
+    <img class="js-banner-img" src="files/banner2.webp"/>
   </a>
   <a id="banner3" href="cursos.html">
-    <img class="js-banner-img" src="files/banner3.png"/>
+    <img class="js-banner-img" src="files/banner3.webp"/>
   </a>
   <a id="banner4" href="sobre.html">
-    <img class="js-banner-img" src="files/banner4.png"/>
+    <img class="js-banner-img" src="files/banner4.webp"/>
   </a>
 </div>
 
