--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <title>Jorge Oliveira Santos</title>
   <link rel="stylesheet" href="css/site.css">
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <meta charset="UTF-8"/>
+  <meta name="viewport"  content="width=device-width, initial-scale=1">
 </head>
 <nav class="js-nav">
   <ul>
@@ -33,17 +34,17 @@
   </ul>
 </nav>
 <div class="js-banner">
-  <a id="banner1" href="sobre.html">
-    <img class="js-banner-img" src="files/Jorge oliveira.webp"/>
+  <a id="banner1" href="sobre.html">Sobre
+    <img style="width: 100%; height: auto; left: 0;" alt="Sobre" src="files/Jorge oliveira.webp"/>
   </a>
-  <a id="banner2" href="programacao.html">
-    <img class="js-banner-img" src="files/banner2.webp"/>
+  <a id="banner2" href="programacao.html">Programação
+    <img style="width: 100%; height: auto; left: 0;" alt="Programação" src="files/banner2.webp"/>
   </a>
-  <a id="banner3" href="cursos.html">
-    <img class="js-banner-img" src="files/banner3.webp"/>
+  <a id="banner3" href="cursos.html">Cursos
+    <img style="width: 100%; height: auto; left: 0;" alt="Cursos" src="files/banner3.webp"/>
   </a>
-  <a id="banner4" href="sobre.html">
-    <img class="js-banner-img" src="files/banner4.webp"/>
+  <a id="banner4" href="sobre.html">Conhecimento on-line
+    <img style="width: 100%; height: auto; left: 0;" alt="Conhecimento on-line" src="files/banner4.webp"/>
   </a>
 </div>
 
