--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <meta charset="UTF-8"/>
   <meta name="viewport"  content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos"/>
+  <meta name="description" content="Jorge Souza Oliveira dos Santos">
+  <meta name="keywords" content="informatica, curso, computador, computacao, programação, desenvolvimento, web, design">
+
 </head>
 <nav class="js-nav">
   <ul>
