--- a/Programacao/Web Design/webdesign.html
+++ b/Programacao/Web Design/webdesign.html
@@ -14,60 +14,83 @@
 <!-- #region Menu Lateral (Indice de tópicos) -->
 <div class="js-side">
   <p>Web Design</p>
-  <a href="#top">Introdução</a>
+  <a href="#0">Introdução</a>
   <p>HTML</p>
-  <a href="#001">O HTML</a>
-  <a href="#002">Marcas</a>
-  <a href="#003">Estrutura de um documento HTML</a>
-  <a href="#004">Árvore</a>
-  <a href="#005">Onde escrever documentos HTML</a>
-  <a href="#006">Comentários</a>
-  <a href="#007">Escape de Caracteres</a>
-  <a href="#008">Atributos</a>
-  <a href="#009">Formatação</a>
-  <a href="#010">Estilos de caractere</a>
-  <a href="#011">Estilos de parágrafo</a>
-  <a href="#012">Layout de página</a>
-  <a href="#013">Links</a>
-  <a href="#014">Listas</a>
-  <a href="#015">Tabelas</a>
-  <a href="#016">Iframe e Embed</a>
-  <a href="#017">Navegação</a>
-  <a href="#018">Caracteres UNICODE</a>
-  <a href="#019">Formulários</a>
-  <a href="#020">Estilos</a>
-  <a href="#021">Classes e IDS</a>
-  <a href="#022">Scripts</a>
-  <a href="#023">Web Design Responsivo</a>
-  <a href="#024">Gráficos</a>
-  <a href="#025">Multimídia</a>
+  <a href="#1">O HTML</a>
+  <a href="#2">Marcas</a>
+  <a href="#3">Estrutura de um documento HTML</a>
+  <a href="#4">Árvore</a>
+  <a href="#5">Onde escrever documentos HTML</a>
+  <a href="#6">Comentários</a>
+  <a href="#7">Escape de Caracteres</a>
+  <a href="#8">Atributos</a>
+  <a href="#9">Formatação</a>
+  <a href="#10">Estilos de caractere</a>
+  <a href="#11">Estilos de parágrafo</a>
+  <a href="#12">Layout de página</a>
+  <a href="#13">Links</a>
+  <a href="#14">Listas</a>
+  <a href="#15">Tabelas</a>
+  <a href="#16">Iframe e Embed</a>
+  <a href="#17">Navegação</a>
+  <a href="#18">Caracteres UNICODE</a>
+  <a href="#19">Formulários</a>
+  <a href="#20">Estilos</a>
+  <a href="#21">Classes e IDS</a>
+  <a href="#22">Scripts</a>
+  <a href="#23">Web Design Responsivo</a>
+  <a href="#24">Gráficos</a>
+  <a href="#25">Multimídia</a>
   <p>CSS</p>
-  <a href="#top">Introdução</a>
+  <a href="#0">Introdução</a>
   <p>Javascript</p>
-  <a href="#top">Introdução</a>
+  <a href="#0">Introdução</a>
   <hr>
 </div>
 <!-- #endregion -->
 
 <!-- #region Botão Voltar ao Topo -->
   <div class="js-top-button">
-    <a href="#top" style="font-size: x-large; text-decoration: none; text-align: center; vertical-align: middle;" title="Voltar ao topo">&#x2934;</a>
+    <a href="#0" style="font-size: x-large; text-decoration: none; text-align: center; vertical-align: middle;" title="Voltar ao topo">&#x2934;</a>
   </div>
 <!-- #endregion -->
 
 <body class="js-page blog">
   <main>
-    <h1 id="top">Introdução</h1>
+    <h1 id="0">Introdução</h1>
 
-    <iframe src="000/intro.html" class="js-post-frame" height="1200px" id="001"></iframe>
+    <iframe src="000/intro.html" class="js-post-frame" height="1200px" id="0"></iframe>
 
-    <h1 id="top">HTML</h1>
+    <h1 id="1">HTML</h1>
 
-    <iframe src="001/ohtml.html" class="js-post-frame" height="700px" id="001"></iframe>
+    <iframe src="001/ohtml.html" class="js-post-frame" height="700px" id="1"></iframe>
 
-    <iframe src="002/marcas.html" class="js-post-frame" height="900px" id="002"></iframe>
+    <iframe src="002/marcas.html" class="js-post-frame" height="900px" id="2"></iframe>
 
-    <iframe src="003/estrutura.html" class="js-post-frame" height="900px" id="003"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="900px" id="3"></iframe>
+
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="4"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="5"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="6"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="7"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="8"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="9"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="10"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="11"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="12"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="13"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="14"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="15"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="16"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="17"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="18"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="19"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="20"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="21"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="22"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="23"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="24"></iframe>
+    <iframe src="003/estrutura.html" class="js-post-frame" height="100px" id="25"></iframe>
 
     <h1 id="top">CSS</h1>
 
@@ -78,4 +101,9 @@
   </main>
 </body>
 </html>
-
+<script>
+for (let i = 0; i <= 25; i++) {
+    document.getElementById(i).style.display = "none";
+}
+document.getElementById(element).style.display = "block";
+</script>
